--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">ProjektFinalny</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="loggedInUser">Anonymous</string>
+    <!--    <string name="default_web_client_id">81434780012-4nbes0pnu387jdao0go7mvp89afaqmkq.apps.googleusercontent.com</string>-->
+    <string-array name="timeList">
+        <item>All</item>
+        <item>Last Month</item>
+        <item>Last Week</item>
+    </string-array>
 </resources>
